# RakHook

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  example.cpp
RakHook/: CMakeLists.txt  consts.hpp  hook_shared.hpp  hooked_rakclient_interface.hpp  offsets.cpp  offsets.hpp  rakhook.cpp  rakhook.hpp
RakNet/: CMakeLists.txt  NetworkTypes.h  PacketEnumerations.h
YAHL/: CMakeLists.txt
YAHL/Yet-another-hook-library/: LICENSE  README.md  hook.h  hook_function_traits.hpp
cmake/: Config.cmake.in
example/: CMakeLists.txt  detail.hpp  emul.hpp  events.hpp  main.cpp
include/RakHook/: detail.hpp  hooked_rakclient_interface.hpp  offsets.hpp  rakhook.hpp  samp.hpp
include/RakNet/: BitStream.h  DS_HuffmanEncodingTree.h  DS_HuffmanEncodingTreeNode.h  DS_LinkedList.h  DS_List.h  DS_Map.h  DS_OrderedList.h  DS_Queue.h  NetworkTypes.h  PacketEnumerations.h  PacketPriority.h  PluginInterface.h  RakClientInterface.h  StringCompressor.h
src/: CMakeLists.txt
src/RakHook/: offsets.cpp  rakhook.cpp  samp.cpp
src/RakNet/: BitStream.cpp  DS_HuffmanEncodingTree.cpp  PluginInterface.cpp  StringCompressor.cpp
